# superego-lgdemo

./: .gitignore  CODEOWNERS  How to add runtime configuration to your graph.html  README.md  README_langgraph_server.md  SVELTE-V5-MIGRATION-GUIDE.md  allconstitutions.md  async_fix_readme.md  backend_models.py  backend_server.py  backend_server_async.py  cli.py  cli_constants.py  cliveinstructions.md  compare_mode_plan.md  config.py  constitution_cli.py  constitution_manager.py  constitution_mcp_client.py  constitution_mcp_server.py  constitution_utils.py  initialprompt.md  inner_agent_definitions.py  inspect_checkpoint.py  keystore.py  langgraph.json  langgraph_server.py  log_sse_events.py  main.py  memory.md  metadata_manager.py  model_discovery.py  package-lock.json  plan_model_discovery_endpoint.md  project-requirements.md  pyproject.toml  rawLanggraphCheckpointTuple.txt  refactor_plan.md  render.yaml  requirements.txt  (+5 more)
.roo/rules/: global.md  memory.md  superego-project.md
How to add runtime configuration to your graph_files/: css  js  webpack-6b2584c51f2fda40.js.download  widget.html
api_routers/: __init__.py  api_key.py  constitutions.py  providers.py  runs.py  threads.py
data/: constitution-tweaks.txt  conversations.db  conversations.db-shm  conversations.db-wal  threads_metadata.db
data/agent_instructions/: inner_agent_default.md  input_superego.md
data/constitutions/: UEF-usereditable.md  UEF.md  academic_integrity.md  accountability_amendment_risk_checks.md  alwaysrefuse.md  bahá’í.md  buddhist.md  child_protection.md  christian.md  companion.md  conflict_management.md  content_moderation.md  core.md  counseling.md  creative_integrity.md  csr.md  deep_ecology.md  default.md  entropic.md  epicurean.md  fiduciary_duties.md  general_implementation_protocol.md  geneva_conventions.md  halachic.md  hindu.md  human_rights.md  indigenous.md  integrity_compliance.md  interfaith.md  jainism.md  k_12.md  k_6.md  kantian_deontological.md  libertarian.md  medical_ethics.md  minimal.md  neurodiversity_accessibility.md  none.md  poemtest.md  preamble_and_core_function.md  (+10 more)
data/sessions/: 060b0485-41e4-44f3-a977-37742fe68fc0.json  0684c308-f855-40ed-b9f6-7743d13bc5c7.json  083a8fcb-9e54-4160-9c31-ff9a1a03cb9f.json  099492cf-5da6-4fad-b5e0-f35dcbca9d11.json  0ce9d643-bb0d-4d9b-b5b6-e706b16e8377.json  100a561b-2d60-4b43-8f48-7dce3a45f477.json  13e7717e-0bce-4af7-8ff4-87310e9f3fdc.json  15f1b1f3-3125-4c7e-9eee-f3bf9e0987e5.json  18d57b70-1926-4380-af77-708ce6fbc1bc.json  19e8f0be-ce84-4e11-9c41-4baeecde8033.json  1cda6953-b238-4401-b86a-950492befc4e.json  2464e921-7454-4751-a452-8330ad32ef04.json  (+82 more)
docs/: llms.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
superego-frontend/: CODING_GUIDELINES.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
(+80 files in other folders)
