[project]
name = "superego-lgdemo"
version = "0.1.0"
description = "Superego Chat System with LangGraph"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "typer>=0.9.0,<1.0.0",
    "colorama>=0.4.6,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "langchain-core>=0.1.0,<1.0.0",
    "langchain-anthropic>=0.1.0,<1.0.0",
    "langgraph>=0.1.0,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "langgraph-cli>=0.1.55,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv-specific configuration
python = "3.9+"

# Entry points for CLI tools
[project.scripts]
superego = "cli:app"
